...
            android:layout_marginTop="50dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/txt_usernameNAV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@{user.username}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_useremailNAV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@{user.email}"
            android:textColor="#000000"
            android:textSize="18sp" />
...
